fix: spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,7 @@ body {
     font-size: 13px;
     letter-spacing: 4.09px;
     color: var(--neon-green);
-    margin-bottom: 32px;
+    margin-bottom: 28px;
     text-transform: uppercase;
 }
 
@@ -44,7 +44,7 @@ main {
     flex-direction: column;
     gap: 40px;
     text-align: center;
-    padding: 48px 48px 80px 48px;
+    padding: 48px 48px 64px 48px;
     background-color: var(--dark-grayish-blue);
     border-radius: 15px;
     max-width: 540px;
